# financials

./: .gitignore  README.md  awsreport.py  categories.txt  costreport.py  fin.py  ledger.txt  pyproject.toml  records.xlsx
.github/: FUNDING.yml
annotations/: 2022-02.txt  2022-04.txt  2022-05.txt  2022-08.txt  2022-09.txt  2022-10.txt  2022-11.txt  2022-12.txt  2023-01.txt  2023-02.txt  2023-04.txt  2023-05.txt  2023-08.txt  2023-12.txt  2024-01.txt  2024-02.txt  2024-04.txt  2024-05.txt  2024-06.txt  2025-01.txt  2025-06.txt  2025-07.txt  2025-08.txt  2025-12.txt
aws-by-month/2022-08/: breakdown.txt
aws-by-month/2022-10/: breakdown.txt
aws-by-month/2022-12/: breakdown.txt
aws-by-month/2023-03/: breakdown.txt
aws-by-month/2023-04/: breakdown.txt
aws-by-month/2023-05/: breakdown.txt
aws-by-month/2023-06/: breakdown.txt
aws-by-month/2023-09/: breakdown.txt
aws-by-month/2023-10/: breakdown.txt
aws-by-month/2023-11/: breakdown.txt
aws-by-month/2023-12/: breakdown.txt
aws-by-month/2024-02/: breakdown.txt
aws-by-month/2024-04/: breakdown.txt
aws-by-month/2024-09/: breakdown.txt
aws-by-month/2024-10/: breakdown.txt
aws-by-month/2024-11/: breakdown.txt
aws-by-month/2025-01/: breakdown.txt
aws-by-month/2025-02/: breakdown.txt
aws-by-month/2025-03/: breakdown.txt
aws-by-month/2025-04/: breakdown.txt
aws-by-month/2025-06/: breakdown.txt
aws-by-month/2025-10/: breakdown.txt
aws-by-month/2025-11/: breakdown.txt
by-month/: README.md
by-month/2022-08/: breakdown.txt
by-month/2022-09/: breakdown.txt
doc/: HACKING.md
(+10 files in other folders)
