[tool.poetry]
name = "riju-financials"
version = "0.1.0"
description = "Financial data for Riju hosting"
authors = ["Radian LLC <contact+riju@radian.codes>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
